--- a/src/templates/verify-email.html
+++ b/src/templates/verify-email.html
@@ -11,7 +11,7 @@
       <p>
         In order to further use the services of the My-Water app, you need to
         verify your email. Please click
-        <a target="_blank" href="{{app_domain}}auth/verify?token={{token}}"
+        <a target="_blank" href="{{app_domain}}/auth/verify?token={{token}}"
           >here</a
         >.
       </p>
